dnl
dnl configure.in
dnl 
dnl PLUTO - parallelism and locality transformer (experimental)
dnl 
dnl Copyright (C) 2007-2008 Uday Bondhugula
dnl
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU General Public License
dnl as published by the Free Software Foundation; either version 2
dnl of the License, or (at your option) any later version.
dnl
dnl The complete GNU General Public Licence Notice can be found as the
dnl `COPYING' file in the top-level directory.
dnl

AC_PREREQ(2.13)

AC_INIT(pluto, 0.8.1, [udayreddy@gmail.com])
AC_CONFIG_AUX_DIR([.])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE()
AM_CONFIG_HEADER(config.h)

dnl clan, candl, cloog are all configured with 64-bit data type support
dnl NOTE: configuring these 64-bit data type support has nothing to do with arch
dnl being 32-bit/64-bit
CFLAGS="-Wall -funroll-loops"

debug="false"
dnl debugging flag
AC_ARG_ENABLE(debug,
              [  --enable-debug  enable compilation with debugging info ],
              debug="true")

if test $debug = "true"; then
    CFLAGS="$CFLAGS -g -DDEBUG -O3"
else
    CFLAGS="$CFLAGS -O3"
fi

dnl check for programs
AC_CHECK_PROG(CC,gcc,gcc)
AC_PROG_CXX
dnl AC_CHECK_PROG(CXX,g++,g++)
AC_CHECK_PROG(LD,ld,ld)
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL

dnl check for some compiler characteristics
dnl MC_CHECK_GUIDING_DECLS
AC_SUBST(GUIDING_DECLS)

dnl check for typedefs, structures, compiler features
AC_C_CONST

AC_CHECK_HEADERS(math.h stdlib.h stdio.h assert.h string.h)

dnl set SOURCE_DIR to current directory
SOURCE_DIR=`pwd`
AC_SUBST(SOURCE_DIR)

AC_CHECK_PROG(CP,cp,cp)
AC_CHECK_PROG(RM,rm,rm -f)
AC_CHECK_PROG(MV,mv,mv)
AC_CHECK_PROG(CAT,cat,cat)
AC_CHECK_PROG(AR,ar,ar)
AC_CHECK_PROG(STRIP,strip,strip)
AC_CHECK_PROG(SED,sed,sed)

dnl Offer --with-gmp-prefix.
AC_ARG_WITH(gmp-prefix,
            AC_HELP_STRING([--with-gmp-prefix=DIR],
                           [DIR Location of GMP package]),
                           [CPPFLAGS="${CPPFLAGS} -I$withval/include";
                            LDFLAGS="${LDFLAGS} -L$withval/lib";
                            LIBS="-lgmp $LIBS";
                            GMP_PREFIX="$withval";
                            ])

AC_CHECK_HEADER(gmp.h,
                [AC_CHECK_LIB(gmp,main,
                 [poly_cv_gmpfatal="no"],
                 [poly_cv_gmpfatal="yes"])],
                 [poly_cv_gmpfatal="yes"])

if test "$poly_cv_gmpfatal" = "yes"; then
    AC_MSG_ERROR([GMP not found])
    else
        AC_CHECK_DECLS(mp_get_memory_functions,[],[
                                                AC_LIBOBJ(mp_get_memory_functions)
                                                ],[#include <gmp.h>
                                                   ])
        fi


use_isl="true"
dnl AC_ARG_ENABLE(isl,
dnl [  --enable-isl     Use isl for Cloog instead of PolyLib],
dnl use_isl="true")

#if test $use_isl = "true"; then
    #CFLAGS="-DPIP_WIDTH_MP"
#fi

dnl Configuring PipLib (long long int is 64 bits)
echo -e "\n=========================="
echo "Configuring PipLib"
echo "=========================="
configureopts="--with-bits=64 --enable-static --disable-shared"
(cd piplib/
 $RM config.cache;
 ./configure ${configureopts}
 )


dnl Configuring Clan 0.6.0
echo -e "\n=========================="
echo "Configuring Clan 0.6.0"
echo "=========================="
configureopts="--enable-llint-version --enable-static --disable-shared \
--enable-internal-scoplib"
(cd clan-0.6.0/
 ./configure ${configureopts}
 )


dnl Configuring Candl 0.4.0 (long long int)
echo -e "\n=========================="
echo "Configuring Candl 0.4.0 "
echo "=========================="
configureopts="--enable-llint-version --enable-static --disable-shared \
--with-scoplib=$SOURCE_DIR/clan-0.6.0/scoplib/scoplib-0.2.0 \
--with-piplib=$SOURCE_DIR/piplib"
(cd candl-0.4.0/
 ./configure ${configureopts}
 )


dnl Configuring isl
echo -e "\n======================"
echo "Configuring isl"
echo "======================"
configureopts="--enable-static --disable-shared --with-gmp-prefix=$GMP_PREFIX --with-gmp-exec-prefix=$GMP_PREFIX"
(cd isl/
 ./configure ${configureopts}
)


dnl Configuring Cloog 0.14.1 (long long int)
echo -e "\n=========================="
echo "Configuring Cloog-isl"
echo "=========================="
configureopts="--with-isl-builddir=../isl --enable-static --disable-shared --with-gmp-prefix=$GMP_PREFIX --with-gmp-exec-prefix=$GMP_PREFIX"
(cd cloog-isl/
 ./configure ${configureopts}
 )

AC_PATH_PROGS(BASH, bash)

AC_CONFIG_FILES([getversion.sh], [chmod +x ./getversion.sh])
AC_CONFIG_COMMANDS([version.h],
                   [echo '#define PLUTO_VERSION "'`./getversion.sh`'"' > src/version.h])

AC_OUTPUT(Makefile \
          src/Makefile \
          polycc.sh
          )

echo " /*-----------------------------------------------*"
echo "  *           PLUTO configuration is OK           *"
echo "  *-----------------------------------------------*/"
echo "Your system is ready to compile PLUTO"
echo "Run 'make' next to compile"
echo "Then, run 'make test' to check if everything is working correctly"
echo -e "Use polycc (see README)\n"
